--- a/oscm/label/install_app.json
+++ b/oscm/label/install_app.json
@@ -6,8 +6,8 @@
         "type": "ANDROID_APK"
     },
     "ios": {
-        "contentUrl": "",
-        "description": "即將上架",
+        "contentUrl": "https://apps.apple.com/us/app/%E6%BE%B3%E6%8F%90%E4%BB%A3%E6%94%B6/id1556460642#?platform=iphone",
+        "description": "iOS下載",
         "imageUrl": "/apple_store.png",
         "type": "IOS_APP"
     },
